@@ -6,7 +6,8 @@ IF(NOT EXISTS /usr/bin/txt2tags)
 	message(FATAL_ERROR "missing txt2tags")
 ENDIF(NOT EXISTS /usr/bin/txt2tags)
 
-set(DOXYGEN_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/reference")
+set(ODIR "${CMAKE_CURRENT_BINARY_DIR}")
+set(DOXYGEN_OUTPUT_DIRECTORY "${ODIR}/reference")
 add_custom_command(
 	OUTPUT doxygen-stamp
 	DEPENDS libcupt3
@@ -14,7 +15,7 @@ add_custom_command(
 
 	COMMAND mkdir -p ${DOXYGEN_OUTPUT_DIRECTORY}
 	COMMAND sh -c "( cat Doxyfile; echo \"OUTPUT_DIRECTORY=${DOXYGEN_OUTPUT_DIRECTORY}\" ) | doxygen -"
-	COMMAND touch ${CMAKE_CURRENT_BINARY_DIR}/doxygen-stamp
+	COMMAND touch ${ODIR}/doxygen-stamp
 
 	VERBATIM
 )
@@ -31,7 +32,7 @@ add_custom_command(
 add_custom_target(doc ALL DEPENDS doxygen-stamp tutorial-stamp)
 
 install(DIRECTORY examples DESTINATION share/doc/lib)
-install(DIRECTORY reference/html DESTINATION share/doc/lib)
-install(DIRECTORY reference/man DESTINATION share FILES_MATCHING PATTERN cupt*)
-install(FILES tutorial.html cupt_tutorial.7 DESTINATION share/doc)
+install(DIRECTORY ${ODIR}/reference/html DESTINATION share/doc/lib)
+install(DIRECTORY ${ODIR}/reference/man DESTINATION share FILES_MATCHING PATTERN cupt*)
+install(FILES ${ODIR}/tutorial.html ${ODIR}/cupt_tutorial.7 DESTINATION share/doc)
 
